# Alice-pleasance-liddell

./: README.md  contactmenu.cpp
StaffManageSystem/: Boss.cpp  Boss.h  CMakeLists.txt  ManageSystem  ManageSystem.cpp  Manager.cpp  Manager.h  Staff.cpp  Staff.h  Worker.h  WorkerManage.cpp  WorkerManage.h
StaffManageSystem/Cpp/: Boss.cpp  Manager.cpp  Staff.cpp  WorkerManage.cpp
StaffManageSystem/header/: Manager.h  Staff.h  WorkerManage.h
speech_contest/: Speaker.h  SpeechManageProcessSystem.cpp  Speech_management.cpp  speech_management.h
